# CloudyInterpolator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.local.yml  docker-compose.remote.yml  docker-compose.yml  manage.py  package.json  postcss.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  test.yml
accounts/management/commands/: createmanager.py
astrodata/: asgi.py  constants.py  settings.py  urls.py  utils.py  wsgi.py
astrodata/base/: forms.py  responses.py  tests.py
deployment/: django.dockerfile  httpd.dockerfile  nginx-proxy.conf  nginx-static.conf  nginx.conf  nginx.dockerfile
deployment/dockerfiles/: django.dockerfile
deployment/management/commands/: create-manager.py
deployment/scripts/: django-init.bash  gen-docker-compose.bash
emission/: apps.py  forms.py  tests.py  urls.py  views.py
feedback/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
feedback/migrations/: 0001_initial.py  0002_alter_feedbackmodel_name.py  0003_alter_feedbackmodel_email.py  0004_alter_feedbackmodel_email_and_more.py
ionization/: apps.py  forms.py  tests.py  urls.py  views.py
ionization/templates/: interpolate.html
static/css/: main.css  tailwind.css
static/js/: utils.js
templates/: landing.html  navigation.html
templates/emission/: download_batches.html  interpolation.html
templates/feedback/: submit.html  thank-you.html
templates/ionization/: download_batches.html  interpolate.html  interpolation.html
templates/layouts/: base.html  base.withheader.html  interpolate.html
