[tool.poetry]
name = "astro-data"
version = "0.1.0"
description = ""
authors = ["Gurkirat Singh <tbhaxor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^0.21.0"
h5py = "^3.7.0"
numpy = "^1.24.1"
gunicorn = "^20.1.0"
requests = "^2.28.2"
pyastronomy = "^0.18.1"
astro-plasma = {git = "https://github.com/tbhaxor/AstroPlasma", branch = "improve/logscale"}
plotly = "^5.13.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
ruff = "^0.0.258"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
