[tool.poetry]
name = "astro-data"
version = "0.1.0"
description = ""
authors = ["Gurkirat Singh <tbhaxor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
python-dotenv = "^0.21.0"
h5py = "^3.7.0"
numpy = "^1.24.1"
gunicorn = "^20.1.0"
requests = "^2.28.2"
pyastronomy = "^0.18.1"
astro-plasma = {git = "https://github.com/dutta-alankar/AstroPlasma.git", rev = "main"}
plotly = "^5.13.1"
roman = "^4.0"
dj-database-url = "^1.3.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F"]
ignore = ["ERA"]
line-length = 160

[tool.black]
line-length = 160
